Working on exclusions

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,7 +11,41 @@ enabled-in-end: true
 
 #### Log deaths to the console
 ##
-# Will alert the console when a player has had their inventory voided by the plugin.
-# The plugin will also print out how many items the player has lost.
+## Will alert the console when a player has had their inventory voided by the plugin.
+## The plugin will also print out how many items the player has lost.
 
 log-death-to-console: true
+
+### Exclude the player hotbar
+##
+## Setting this to true will exclude any items in the player hotbar at the time of death
+exclude-hotbar: false
+
+### Exclude player armor
+##
+## Setting this to true will exclude any items stored in the armor inventory slots.
+## This includes helmet, chestplate, leggings, boot, and off-hand inventory slots.
+exclude-armor: false
+
+### Broadcast message to server when a player's items are voided
+##
+## The message displayed to a player when their items are voided.
+## This message will not display if the player has an empty inventory.
+
+display-message-to-server: false
+message-to-server: '&8[!] &c%playername% &rdied in the %dimension% and lost %count% items!'
+
+### Broadcast message to server when a player's items are voided
+##
+## The message displayed to a player when their items are voided.
+## This message will not display if the player has an empty inventory.
+
+display-message-to-player: true
+message-to-player: 'You have died, and your inventory of &c%count% &ritems have been destroyed.'
+
+### Available keywords:
+##
+## %playername% -> Replaced with the player's username
+## %newline% -> Creates a new line on the screen
+## %count% -> Replaced with how many items were lost upon death
+## %dimension% -> Replaced with the dimension (overworld, the end, or the nether)
