--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,13 +9,6 @@ enabled-in-overworld: true
 enabled-in-nether: true
 enabled-in-end: true
 
-#### Log deaths to the console
-##
-## Will alert the console when a player has had their inventory voided by the plugin.
-## The plugin will also print out how many items the player has lost.
-
-log-death-to-console: true
-
 ### Exclude the player hotbar
 ##
 ## Setting this to true will exclude any items in the player hotbar at the time of death
@@ -26,6 +19,22 @@ exclude-hotbar: false
 ## Setting this to true will exclude any items stored in the armor inventory slots.
 ## This includes helmet, chestplate, leggings, boot, and off-hand inventory slots.
 exclude-armor: false
+
+### Excluded items
+##
+## Items in this list will not be removed upon death.
+exclude-items: false
+excluded-items-list:
+  - COMMAND_BLOCK
+  - EMERALD_ORE
+  - DIAMOND
+
+#### Log deaths to the console
+##
+## Will alert the console when a player has had their inventory voided by the plugin.
+## The plugin will also print out how many items the player has lost.
+
+log-death-to-console: true
 
 ### Broadcast message to server when a player's items are voided
 ##
