--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,10 +22,10 @@ exclude-armor: false
 
 ### Exclude player off-hand slot
 ##
-## Setting this to true will exclude any  stored in the off-hand inventory slot.
+## Setting this to true will exclude any item(s) stored in the off-hand inventory slot.
 exclude-offhand: false
 
-### Excluded items
+### Excluded item list
 ##
 ## Items in this list will not be removed upon death.
 exclude-items: false
@@ -43,18 +43,19 @@ log-death-to-console: true
 
 ### Broadcast message to server when a player's items are voided
 ##
-## The message displayed to a player when their items are voided.
 ## This message will not display if the player has an empty inventory.
 
 display-message-to-server: false
+
+### The message to send
 message-to-server: '&8[!] &c%playername% &rdied in the %dimension% and lost %count% item(s)!'
 
-### Broadcast message to server when a player's items are voided
-##
-## The message displayed to a player when their items are voided.
-## This message will not display if the player has an empty inventory.
+### Display message to the player when their items are voided
 
 display-message-to-player: true
+
+## The message displayed to a player when their items are voided.
+## This message will not display if the player has an empty inventory
 message-to-player: 'You have died, and your inventory of &c%count% &ritem(s) have been destroyed.'
 
 ### Available keywords:
@@ -62,4 +63,14 @@ message-to-player: 'You have died, and your inventory of &c%count% &ritem(s) hav
 ## %playername% -> Replaced with the player's username
 ## %newline% -> Creates a new line on the screen
 ## %count% -> Replaced with how many items were lost upon death
-## %dimension% -> Replaced with the dimension (overworld, the end, or the nether)
+## %dimension% -> Replaced with the dimension (overworld, end, nether, or the name of a custom dimension)
+
+### Updater
+##
+## Toggle the "There is an update available!" check
+
+updater-enabled: true
+
+### bStats plugin metrics
+
+metrics-enabled: true
